# PF_ring-based-DDoS

./: Makefile
drivers/: Makefile  README.drivers
drivers/DNA/: Makefile  README.DNA  README.LICENSE
drivers/DNA/e1000-8.0.35-DNA/src/: e1000_dna.c  e1000_main.c
drivers/DNA/e1000e-1.6.3-DNA/: e1000e.spec
drivers/DNA/e1000e-1.6.3-DNA/src/: Makefile  e1000.h  e1000e_dna.c  netdev.c
drivers/DNA/igb-3.2.10-DNA/src/: Makefile  igb.h  igb_dna.c  igb_ethtool.c  igb_main.c  load_dna_driver.sh
drivers/DNA/ixgbe-3.7.17-DNA/scripts/: set_irq_affinity.sh
drivers/DNA/ixgbe-3.7.17-DNA/src/: Makefile  ixgbe.h  ixgbe_82599.c  ixgbe_dna.c  ixgbe_ethtool.c  ixgbe_main.c  load_dna_driver.sh
drivers/PF_RING_aware/: README
drivers/PF_RING_aware/intel/: Makefile
kernel/: README  pf_ring.c
kernel/linux/: pf_ring.h
kernel/plugins/: Module.symvers  dummy_plugin.c
kernel/plugins/.tmp_versions/: dummy_plugin.mod
lib/: Makefile  Makefile.in  config.status  configure  configure.in  pfring.c  pfring.h  pfring_i82599.c  pfring_mod.c  pfring_mod.h  pfring_mod_dag.c  pfring_mod_dag.h  pfring_mod_dna.c  pfring_mod_usring.c  pfring_mod_usring.h  pfring_mod_virtual.h  pfring_redirector.c  pfring_utils.c  pfring_utils.h  pfring_zero.h
lib/.svn/: all-wcprops  entries
lib/.svn/text-base/: pfring_hw_filtering.c.svn-base  pfring_hw_filtering.h.svn-base  pfring_mod_dna.h.svn-base  pfring_utils.h.svn-base
lib/libs/.svn/: all-wcprops  entries
lib/libs/.svn/text-base/: libpfring_dna_i686.a.svn-base
lib/notused/.svn/: all-wcprops  entries
lib/utils/.svn/: all-wcprops  entries
libpcap-1.1.1-ring/: Makefile  Makefile.in  config.h  config.status  inet.c  pcap-linux.c
pfcount_multichannel/: .pfcount_multichannel.c.kate-swp  DDoS.h  Makefile  pfcount_multichannel.c  pfcount_multichannel.kdev4
tommyds-1.0/: tommytypes.h
tommyds-1.0/benchmark/data/core_2_duo_e6600_2G4/: dat_forward_change.lst  dat_forward_hit.lst  dat_forward_insert.lst  dat_forward_miss.lst  dat_forward_remove.lst  dat_forward_size.lst  dat_random_change.lst  dat_random_hit.lst  dat_random_insert.lst  dat_random_miss.lst  dat_random_remove.lst  dat_random_size.lst  gr_def.gnu
tommyds-1.0/benchmark/data/core_i5_650_3G2/: dat_forward_change.lst  dat_forward_hit.lst  dat_forward_insert.lst  dat_forward_miss.lst  dat_forward_remove.lst  gr_def.gnu  (+7 more)
tommyds-1.0/doc/: annotated.html  benchmark.html  classes.html  design.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  license.html  multiindex.html  structtommy__allocator__struct.html  structtommy__array__struct.html  structtommy__hashdyn__struct.html  structtommy__hashlin__struct.html  structtommy__hashtable__struct.html  structtommy__node__struct.html  structtommy__trie__inplace__node__struct.html  structtommy__trie__inplace__struct.html  structtommy__trie__struct.html  tommy_8h.html  tommy_8h_source.html  tommyalloc_8h.html  tommyalloc_8h_source.html  tommyarray_8h.html  tommyarray_8h_source.html  tommyhash_8h.html  tommyhash_8h_source.html  tommyhashdyn_8h.html  tommyhashdyn_8h_source.html  tommyhashlin_8h.html  tommyhashlin_8h_source.html  tommyhashtbl_8h.html  tommyhashtbl_8h_source.html  tommylist_8h.html  tommylist_8h_source.html  tommytrie_8h.html  (+5 more)
(+55 files in other folders)
